// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`generateAuthMiddleware() matches snapshot 1`] = `
"const authRequired = (req, res, next) => {
  const header = req.headers.authorization;
  if (!header) return res.status(401).json({ error: 'No token provided' });
  const token = header.split(' ')[1];
  try {
    req.user = jwt.verify(token, process.env.JWT_SECRET);
    next();
  } catch {
    return res.status(401).json({ error: 'Invalid or expired token' });
  }
};"
`;

exports[`generateDatabase() matches snapshot 1`] = `
"mongoose.connect('mongodb://localhost/myapp', {
  useNewUrlParser: true,
  useUnifiedTopology: true,
});"
`;

exports[`generateDatabase() matches snapshot with envVar 1`] = `
"mongoose.connect(process.env.MONGODB_URI, {
  useNewUrlParser: true,
  useUnifiedTopology: true,
});"
`;

exports[`generateMiddleware() matches snapshot for ratelimit 1`] = `"app.use(rateLimit({ windowMs: 60000, max: 200 }));"`;

exports[`generateRouteWithAuth() matches snapshot with auth 1`] = `
"app.get('/me', authRequired, async (req, res) => {
  try {
    return res.json({ user: req.user });
  } catch (err) {
    return res.status(500).json({ error: err.message });
  }
});"
`;

exports[`generateRouteWithAuth() matches snapshot without auth 1`] = `
"app.get('/posts', async (req, res) => {
  try {
    return res.json({ posts });
  } catch (err) {
    return res.status(500).json({ error: err.message });
  }
});"
`;
